--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		<div id="discover">
 			<a href="urus.html">
 				<video autoplay="" muted="true" preload="none" loop="" style="width: 100%; height: 855px; top: -223px; left: 0px; display: block;">
-					<source src="//content.jwplatform.com/videos/80m3GzZu-Xdf1XFbp.mp4" type="video/mp4">
+					<source src="images/index.mp4" type="video/mp4">
 				</video>
 				<div class="more">
 					<div class="discover_more"></div>
